start for TYPO3 11 compatibility php 8 compatibility clean up

--- a/Resources/Private/Templates/v2/day.tmpl
+++ b/Resources/Private/Templates/v2/day.tmpl
@@ -33,20 +33,8 @@
 
 <br style="clear: both;"/>
 <div class="view-header">
-	<div class="previous-button">
-	<!-- ###PREV_DAYLINK### start-->
-		<!-- ###PREV_DAYLINKTEXT### start-->
-		<img src="###IMG_PATH###/control-180.png" alt="[Previous Day]" />
-		<!-- ###PREV_DAYLINKTEXT### end-->
-	<!-- ###PREV_DAYLINK### end-->
-	</div>
-	<div class="next-button">
-	<!-- ###NEXT_DAYLINK### start-->
-		<!-- ###NEXT_DAYLINKTEXT### start-->
-		<img src="###IMG_PATH###/control.png" alt="[Next Day]" />
-		<!-- ###NEXT_DAYLINKTEXT### end-->
-	<!-- ###NEXT_DAYLINK### end-->
-	</div>
+	<div class="previous-button"></div>
+	<div class="next-button"></div>
 	<h1>###DISPLAY_DATE###</h1>
 </div>
 ###DAY###
