--- a/Resources/Private/Templates/v2/month.tmpl
+++ b/Resources/Private/Templates/v2/month.tmpl
@@ -35,15 +35,13 @@
 <div class="view-header">
 	<div class="previous-button">
 	<!-- ###PREV_MONTHLINK### start-->
-		<!-- ###PREV_MONTHLINKTEXT### start-->
-		<img src="###IMG_PATH###/control-180.png" alt="[Previous Month]" />
+		<!-- ###PREV_MONTHLINKTEXT### start-->&nbsp;
 		<!-- ###PREV_MONTHLINKTEXT### end-->
 	<!-- ###PREV_MONTHLINK### end-->
 	</div>
 	<div class="next-button">
 	<!-- ###NEXT_MONTHLINK### start-->
-		<!-- ###NEXT_MONTHLINKTEXT### start-->
-		<img src="###IMG_PATH###/control.png" alt="[Next Month]" />
+		<!-- ###NEXT_MONTHLINKTEXT### start-->&nbsp;
 		<!-- ###NEXT_MONTHLINKTEXT### end-->
 	<!-- ###NEXT_MONTHLINK### end-->
 	</div>
